chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowlit
spec:
  type: ClusterIP
  selector:
    app: snowlit
  ports:
  - port: 8501
