chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snowlit
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: my-ca-issuer
spec:
  tls:
  - hosts:
    - snowlit.cube.local
    secretName: snowlit-certs
  rules:
  - host: snowlit.cube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snowlit
            port: 
              number: 8501
